--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <div id="resultado-div"></div>
 
     <script type="module" src="./src/presenter.js"></script>
+    <h1>Hola</h1>
   </body>
 </html>
