Mejorar visualizacion del saludo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
       <input type="text" id="nombre" />
       <input type="submit" value="Saludar" id="saludar-button" />
     </form>
+    <strong>
     <div id="resultado-div"></div>
+
+    </strong>
 
     <script type="module" src="./src/presenter.js"></script>
   </body>
