--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <html>
   <body>
     <form id="saludar-form">
-      <label for="nombre">Cual es tu nombre:</label>
+      <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" />
+      <label for="genero">Sexo:</label>
+      <select id="genero">
+        <option value="M">Masculino</option>
+        <option value="F">Femenino</option>
+      </select>
       <input type="submit" value="Saludar" id="saludar-button" />
     </form>
     <strong>
     <div id="resultado-div"></div>
-
     </strong>
+    
 
     <script type="module" src="./src/presenter.js"></script>
   </body>
