--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <option value="M">Masculino</option>
         <option value="F">Femenino</option>
       </select>
+      <label for="edad">Edad:</label>
+      <input type="number" id="edad" />
       <input type="submit" value="Saludar" id="saludar-button" />
     </form>
     <strong>
     <div id="resultado-div"></div>
     </strong>
-    
-
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
