--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
-<html>
-  <body>
-    <form id="saludar-form">
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" />
-      <label for="genero">Sexo:</label>
-      <select id="genero">
-        <option value="M">Masculino</option>
-        <option value="F">Femenino</option>
-      </select>
-      <label for="edad">Edad:</label>
-      <input type="number" id="edad" />
-      <input type="submit" value="Saludar" id="saludar-button" />
-    </form>
-    <strong>
-    <div id="resultado-div"></div>
-    </strong>
-    <script type="module" src="./src/presenter.js"></script>
-  </body>
+<body>
+  <form id="saludar-form">
+    <br>
+    <label for="Nombre">Nombre</label>
+    <input type="text" id="nombre" />
+    <label for="Edad">Edad</label>
+    <input type="text" id="edad" />
+    <label for="Genero">Sexo:</label>
+    <select id="genero" name="opciones">
+      <option value="F">Femenino</option>
+      <option value="M">Masculino</option>
+    </select>
+    <input type="submit" value="Saludar" id="saludar-button" />
+  </form>
+  <div id="resultado-div"></div>
+
+  <script type="module" src="./src/presenter.js"></script>
+</body>
 </html>
