Saludo en ingles y español

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <body>
   <form id="saludar-form">
+    <select id="idioma" name="opciones">
+      <option value="ES">Español</option>
+      <option value="EN">English</option>
+    </select>
     <br>
     <label for="Nombre">Nombre</label>
     <input type="text" id="nombre" />
